hphp/hack/test/typecheck/parse_xhp_format_infinite_loop2.php.exp
File "parse_xhp_format_infinite_loop2.php", line 4, characters 16-16:
A name is expected here. (Parsing[1002])
File "parse_xhp_format_infinite_loop2.php", line 5, characters 1-1:
Encountered unexpected text ``, was expecting a XHP attribute. (Parsing[1002])
